feat: fixing placement clear